docs: adding create opening documentation
